# pemv

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md  build.rs  cliff.toml  release.sh
.github/workflows/: artifacts.yml  integrity.yml
src/: cli.rs  error.rs  macros.rs  main.rs  output_colours.rs  testing_macros.rs  util.rs
src/config/: colour_choice.rs  mod.rs
src/emv/: additional_terminal_capabilities.rs  authorisation_response_code.rs  bitflag_values.rs  cvm_list.rs  cvm_results.rs  iad.rs  mod.rs  pos_entry_mode.rs  tag_basic_info.rs  terminal_capabilities.rs  terminal_type.rs  tlv_parsing.rs  transaction_type.rs  tsi.rs  tvr.rs
src/emv/bitflag_values/: cci.rs  cvm_results.rs  cvr.rs  mod.rs  tvr.rs
src/emv/bitflag_values/cv_rule/: cv_method.rs  cvm_condition.rs  mod.rs
src/emv/ccd/: cci.rs  cvr.rs  iad.rs  mod.rs
src/emv/cv_rule/: cv_method.rs  cvm_condition.rs  mod.rs
src/emv/iac/: default.rs  denial.rs  mod.rs  online.rs
src/emv/status_values/: cv_rule.rs  cvm_results.rs  cvr.rs  mod.rs  tsi.rs  tvr.rs
src/emv/tlv_parsing/: auto_tlv.rs  ber_tlv.rs  ingenico_tlv.rs  mod.rs  process_emv_tag.rs
src/emv/unit_values/: cv_rule.rs  cvm_results.rs  cvr.rs  mod.rs  tsi.rs  tvr.rs
src/emv/unit_values/cv_rule/: mod.rs
src/non_emv/: mod.rs  service_code.rs
src/status_values/: cv_rule.rs  cvm_results.rs  cvr.rs  mod.rs  tsi.rs  tvr.rs
