[package]
name = "pemv"
version = "0.1.0"
authors = ["Zacchary Dempsey-Plante <zacc@ztdp.ca>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zedseven/pemv"
homepage = "https://github.com/zedseven/pemv"
description = "A utility for parsing EMV-related data."

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0"
clap = "3.1"
