[package]
name = "pemv"
version = "0.1.4"
authors = ["Zacchary Dempsey-Plante <zacc@ztdp.ca>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zedseven/pemv"
homepage = "https://github.com/zedseven/pemv"
description = "A utility for parsing EMV-related data."

[profile.release]
codegen-units = 1
lto = true

[dependencies]
atty = "0.2"
clap = "3.2"
termcolor = "1.1"

[build-dependencies]
clap = "3.2"
clap_complete = "3.2"
clap_mangen = "0.1"
dotenv = "0.15"
