[package]
name = "pemv"
version = "0.4.2" # Managed by release.sh
authors = ["Zacchary Dempsey-Plante <zacc@ztdp.ca>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zedseven/pemv"
homepage = "https://github.com/zedseven/pemv"
description = "A utility for parsing EMV-related data."

[profile.release]
codegen-units = 1
lto = true

[dependencies]
atty = "0.2"
clap = { version = "4.0", features = ["wrap_help"] }
derivative = "2.2"
figment = { version = "0.10", features = ["toml", "env"] }
serde = "1.0"
serde_derive = "1.0"
termcolor = "1.1"

[build-dependencies]
clap = "4.0"
clap_complete = "4.0"
clap_mangen = "0.2"
dotenv = "0.15"
